fix for wrapping urls in description

--- a/tapas_redesign/assets/sass/templates/record.scss
+++ b/tapas_redesign/assets/sass/templates/record.scss
@@ -51,3 +51,7 @@
     word-wrap: break-word;
   }
 }
+
+.field-name-field-tapas-description {
+  word-wrap: break-word;
+}
